# resend-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
.github/workflows/: ci.yml
skills/: resend-cli.md
src/: main.rs
src/api/: api_keys.rs  broadcasts.rs  contact_properties.rs  contacts.rs  domains.rs  emails.rs  mod.rs  receiving.rs  segments.rs  templates.rs  topics.rs  webhooks.rs
src/commands/: api_keys.rs  broadcasts.rs  contact_properties.rs  contacts.rs  domains.rs  emails.rs  mod.rs  receiving.rs  segments.rs  templates.rs  topics.rs  webhooks.rs
src/config/: mod.rs
src/output/: mod.rs
tests/: integration_tests.rs
