[package]
name = "resend-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "resend"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
config = "0.13"
tabled = "0.14"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17" # Progress bars
colored = "2.0"
dotenv = "0.15"
dirs = "5.0"
async-trait = "0.1"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.0"
assert_cmd = "2.0"
